Archive2/d6/9ea3577cb071b3/output
main.cpp:14:5: error: no matching constructor for initialization of 'X'
  X lx(2, "test");
    ^  ~~~~~~~~~
main.cpp:6:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
struct X {
       ^
main.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
main.cpp:6:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 2 were provided
1 error generated.
